--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -4,7 +4,7 @@
   padding: 20px 10px;
   color: white;
   background-color: black;
-  justify-content: space-between;
+  gap: 20px;
 }
 
 .navbar li {
